--- a/app/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_bottom_sheet.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:text="BottomSheet"
         android:textSize="18dp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         android:layout_marginTop="46dp"
         android:layout_marginBottom="46dp"
